# flama

./: .gitignore  CMakeLists.txt  README.md  build.bat  copy_dlls.ps1  vcpkg-configuration.json  vcpkg.json
config/: config.json  example_config.json
scripts/: README_test_tts_asr.md  prompt.json  test_ocr_tts.py  test_tts_asr.py
src/: continuous_batching_benchmark.cpp  continuous_batching_chat.cpp  continuous_batching_chat.h  defs.h  ffmpeg_tuning.cpp  frame_selector.cpp  frame_selector.h  hw_device_d3d11.cpp  json_config.cpp  json_config.hpp  main.cpp  parse_options.cpp  parse_options.h  stb_image.h  texture_resource_pool.cpp  util.h  util.hpp  video_segment.cpp  video_segment.h  visual_language_chat.cpp  vlm_chat.cpp  vlm_chat.h  vlm_service.cpp  vpp.cpp  vpp.h
src/batch/: batch_state.cpp  batch_state.h
src/config/: config_logging.cpp  config_logging.h  json_config.cpp  json_config.hpp  parse_options.cpp  parse_options.h
src/core/: debug.cpp  profiling.h
src/device/: hw_device.h  hw_device_d3d11.cpp  process_frames_ocl.h  process_frames_ocl_d3d11.cpp  texture_resource_pool.cpp  texture_resource_pool.h
src/examples/: continuous_batching_benchmark.cpp  ffmpeg_tuning.cpp  vpl_infer.cpp
src/image/: load_image.cpp  load_image.hpp
src/inference/: cb_processing.cpp  cb_processing.h  continuous_batching_chat.cpp  continuous_batching_chat.h  vlm_chat.cpp  vlm_chat.h
src/json/: vlm_json_output.cpp  vlm_json_output.h
src/utils/: debug.h  path_utils.cpp  path_utils.h  profiling.h  util.cpp  util.h
src/video/: decode_pipeline.cpp  decode_pipeline.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  frame_selector.cpp  frame_selector.h  segment_timing.cpp  segment_timing.h  video_segment.cpp  video_segment.h  vpp.cpp  vpp.h
